ADD: reduce esc delay time

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,6 +15,9 @@ unbind-key C-z
 # status bar every minute update
 set-option -g status-interval 60
 
+# esc timeout
+set -sg escape-time 0
+
 # default is black
 set-option -g status-bg default
 set-option -g status-fg $tm_color_neutral
