ADD: Clear terminal like iTerm2

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -86,3 +86,6 @@ tm_separator="#[fg=colour236]|"
 tm_time='#[fg=colour190]%a %h-%d %H:%M:%S'
 
 set-option -g status-right $tm_separator' '$tm_separator' '$tm_time' '
+
+################# Clear like iTerm2
+bind -n C-M-k send-keys -R \; clear-history
