ADD: Don't rename window on tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@ set -g default-terminal 'screen-256color'
 set -g mouse on
 set -g history-limit 25000
 
+# Just don't rename the f*cking window
+set-option -g allow-rename off
+
 # Colors!
 tm_color_active=colour208
 tm_color_inactive=colour241
