--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,10 +85,15 @@ bind c new-window -c "#{pane_current_path}"
 set-option -g status-left " #[fg=colour200][#S] "
 
 ################## RIGHT STATUS BAR - EXTERNAL CONTENT ##################
-tm_separator="#[fg=colour236]|"
-tm_time='#[fg=colour190]%a %h-%d %H:%M:%S'
+tm_separator="#[fg=colour103]|"
+tm_time='#[fg=colour43]%a %d %H:%M'
+ruby_version='#[fg=colour196]Ruby #(ruby -v|cut -c 6-10)'
+rails_version='#[fg=magenta]#(rails -v)'
 
-set-option -g status-right $tm_separator' '$tm_separator' '$tm_time' '
+set-option -g status-right $tm_time' '$tm_separator' '$ruby_version' '$tm_separator' '$rails_version' '
 
 ################# Clear like iTerm2
 bind -n C-M-k send-keys -R \; clear-history
+
+################# Reload key
+bind R source-file ~/.tmux.conf \; display-message " Config reloaded..".
