ADD: Modify length of right status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,10 +85,11 @@ bind c new-window -c "#{pane_current_path}"
 set-option -g status-left " #[fg=colour200][#S] "
 
 ################## RIGHT STATUS BAR - EXTERNAL CONTENT ##################
+set -g status-right-length 100
 tm_separator="#[fg=colour103]|"
 tm_time='#[fg=colour43]%a %d %H:%M'
 ruby_version='#[fg=colour196]Ruby #(ruby -v|cut -c 6-10)'
-rails_version='#[fg=magenta]#(rails -v)'
+rails_version='#[fg=colour154]#(rails -v|cut -c 1-11)'
 
 set-option -g status-right $tm_time' '$tm_separator' '$ruby_version' '$tm_separator' '$rails_version' '
 
