--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # improve colors
 set -g default-terminal 'screen-256color'
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 set -g mouse on
 set -g history-limit 25000
