--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,12 +1,11 @@
 # improve colors
-set -g default-terminal 'screen-256color'
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "screen-256color"
 
 set -g mouse on
 set -g history-limit 25000
 
 # Just don't rename the f*cking window
-set-option -g allow-rename off
+set -g allow-rename off
 
 # Colors!
 tm_color_active=colour208
@@ -17,23 +16,23 @@ tm_color_neutral=colour255
 unbind-key C-z
 
 # status bar every minute update
-set-option -g status-interval 60
+set -g status-interval 60
 
 # esc timeout
 set -sg escape-time 0
 
 # default is black
-set-option -g status-bg default
-set-option -g status-fg $tm_color_neutral
-set-option -g status-right-attr bold
+set -g status-bg default
+set -g status-fg $tm_color_neutral
+set -g status-right-style bold
 
 # Pane border
-set-option -g pane-border-fg $tm_color_inactive
-set-option -g pane-active-border-fg $tm_color_active
+set -g pane-border-style fg=$tm_color_inactive
+set -g pane-active-border-style fg=$tm_color_active
 
 # Pane number display
-set-option -g display-panes-active-colour $tm_color_active
-set-option -g display-panes-colour $tm_color_inactive
+set -g display-panes-active-colour $tm_color_active
+set -g display-panes-colour $tm_color_inactive
 
 # act like vim
 setw -g mode-keys vi
@@ -54,9 +53,10 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Window titles
-set-window-option -g window-status-attr none
-set-window-option -g window-status-current-attr bold,underscore
-set-window-option -g window-status-current-fg $tm_color_active
+set-window-option -g window-status-style none
+set-window-option -g window-status-current-style bold,underscore
+set-window-option -g window-status-current-style fg=$tm_color_active
+
 # #I: number; #W name
 set-window-option -g  window-status-format "#I #W"
 set-window-option -g  window-status-current-format "#I #W"
