--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,9 @@
 # improve colors
 set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 set -g mouse on
-set -g history-limit 25000
+set -g history-limit 1000000
 
 # Just don't rename the f*cking window
 set -g allow-rename off
@@ -71,13 +72,13 @@ set-window-option -g pane-base-index 1
 
 ################## BINDINGS ##################
 # All the bindings: https://github.com/tmux/tmux/blob/master/key-bindings.c
-bind [ copy-mode
+bind ` copy-mode
 bind -Tcopy-mode-vi v send -X begin-selection
 bind -Tcopy-mode-vi y send -X copy-pipe 'xclip -in -selection clipboard' \; display-message "copied to system clipboard"
 bind -Tcopy-mode-vi C-v send -X rectangle-toggle
-bind ] paste-buffer
+bind + paste-buffer
 # Open new panes/windows in the same directory
-bind '"' split-window -c "#{pane_current_path}"
+bind '´' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
