wip: lots of things

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # improve colors
 set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g mouse on
 set -g history-limit 1000000
@@ -8,10 +9,14 @@ set -g history-limit 1000000
 # Just don't rename the f*cking window
 set -g allow-rename off
 
+set-option -g focus-events on
+
 # Colors!
 tm_color_active=colour208
 tm_color_inactive=colour241
 tm_color_neutral=colour255
+tm_bg_color=colour232
+tm_fg_color=colour236
 
 # don't suspend
 unbind-key C-z
@@ -54,9 +59,10 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Window titles
-set-window-option -g window-status-style none
+set-option -g status-style bg=$tm_bg_color
+set-window-option -g window-status-style bg=$tm_bg_color,dim
 set-window-option -g window-status-current-style bold,underscore
-set-window-option -g window-status-current-style fg=$tm_color_active
+set-window-option -g window-status-current-style fg=$tm_color_active,bg=$tm_fg_color,bright
 
 # #I: number; #W name
 set-window-option -g  window-status-format "#I #W"
@@ -74,7 +80,7 @@ set-window-option -g pane-base-index 1
 # All the bindings: https://github.com/tmux/tmux/blob/master/key-bindings.c
 bind ` copy-mode
 bind -Tcopy-mode-vi v send -X begin-selection
-bind -Tcopy-mode-vi y send -X copy-pipe 'xclip -in -selection clipboard' \; display-message "copied to system clipboard"
+bind -Tcopy-mode-vi y send -X copy-pipe 'pbcopy' \; display-message "copied to system clipboard"
 bind -Tcopy-mode-vi C-v send -X rectangle-toggle
 bind + paste-buffer
 # Open new panes/windows in the same directory
@@ -84,19 +90,24 @@ bind c new-window -c "#{pane_current_path}"
 
 ################## LEFT STATUS BAR - TMUX SESSION ##################
 # Diplay session name
-set-option -g status-left " #[fg=colour200][#S] "
+set -g status-left-length 200
+set-option -g status-left " #[fg=colour105][#S] "
 
 ################## RIGHT STATUS BAR - EXTERNAL CONTENT ##################
-set -g status-right-length 100
+set -g status-right-length 200
 tm_separator="#[fg=colour103]|"
 tm_time='#[fg=colour43]%a %d %H:%M'
 ruby_version='#[fg=colour196]Ruby #(ruby -v|cut -c 6-10)'
-rails_version='#[fg=colour154]#(rails -v|cut -c 1-11)'
+rails_version='#[fg=colour147]#(rails -v|cut -c 1-11)'
 
 set-option -g status-right $tm_time' '$tm_separator' '$ruby_version' '$tm_separator' '$rails_version' '
 
 ################# Clear like iTerm2
-bind -n C-M-k send-keys -R \; clear-history
+bind C-K send-keys -R \; clear-history
+
+### New session
+bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
 
 ################# Reload key
 bind R source-file ~/.tmux.conf \; display-message " Config reloaded..".
+
