Add example local configuration template
- Create zshrc.local.example as a template for private configuration
- Update .gitignore to allow *.local.example files while still blocking actual local configuration

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 *.local
 *.local.*
 
-# Do not ignore CLAUDE.md
+# Exceptions to the ignore rules
 !CLAUDE.md
+!*.local.example
 
 # Ignore backup files
 *~
